# lemniscat.plugin.azurecli

./: .gitignore  LICENSE  README.md  gitversion.yml  pyproject.toml
.github/workflows/: check-conventional-commit.yml  publish-to-pypi.yml
sample/: test.ps1
src/lemniscat/plugin/azurecli/: azurecli.py  filestore.py  main.py  plugin.yaml  requirements.txt
